--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ nav {
 
 }
 
+.burger {
+    display: none;
+}
+
 
 
 .search {
@@ -441,6 +445,15 @@ nav {
     .container {
         max-width: 1280px;
     }
+
+}
+    .logo-block {
+        margin-left: 50px;
+    }
+
+    .header-btn {
+        margin-right: 50px;
+    }
     .text-block {
         margin-left: 50px;
     }
@@ -450,6 +463,11 @@ nav {
         gap: 60px   ;
     }
 
+
+    .project .text-h2 {
+       
+        margin-left: 25px;
+    }
     .testimonial__flex {
         justify-content: center;
         flex-wrap: wrap;
@@ -459,7 +477,7 @@ nav {
         justify-content: center;
         gap: 100px;
     }
-}
+
 
 @media screen and (max-width: 992px) {
     .container {
@@ -471,7 +489,7 @@ nav {
     }
 
     .logo-block {
-        margin-left: 15px;
+        margin-left: 30px;
     }
 
     nav {
@@ -483,8 +501,14 @@ nav {
     }
 
     .search {
-        margin-right: 15px;
+        margin-right: 30px;
     }
+
+    .services__flex {
+        margin-right: 30px;
+        margin-left: 30px;
+    }
+        
 
     .solution-item {
         padding-top: 125px;
@@ -551,6 +575,150 @@ nav {
 
 
 } 
+
+@media screen and (max-width: 769px) {
+    .container {
+        max-width: 769px;
+    }
+
+    .text-h2 {
+        font-size: 35px;
+    }
+
+    nav {
+        display: none;
+    }
+    .header-btn {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-right: 35px;
+    }
+    .burger {
+        display: block;
+    }
+
+
+    .burger-line {
+        
+        display: flex;
+        margin-bottom: 5px;
+        height: 3px;
+        width: 30px;
+        background-color: #2F2E2E;
+        color: #2F2E2E;
+    }
+
+    .burger-line:last-child {
+        margin-bottom: 0;
+    }
+
+    .solution-item {
+        padding-left: 35px;
+        padding-top: 60px;
+        height: 350px;
+        width: 400px;
+    }
+
+    .solution-item .text-p {
+        font-size: 20px;
+        width: 325px;
+    }
+
+
+    .img-block {
+        width: 1214px;
+        height: 575px;
+    }
+    .solution {
+        position: relative;
+        height: 575px;
+    }
+
+    .aboutus {
+        padding-top: 50px;
+    }
+    .aboutus__flex img {
+        height: 330px;
+        width: 390px;
+    }
+
+    .text-block {
+        margin-top: 10px;
+        margin-left: 0;
+    }
+
+    .aboutus__flex .text-p {
+        font-size: 20px;
+        width: 315px;
+        margin-bottom: 20px;
+    }
+
+    .text-block .text-h2 {
+        margin-bottom: 12px;
+    }
+
+    .btn {
+        font-size: 18px;
+    }
+
+    .project {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .projects__grid {
+        gap: 35px;
+    }
+    .projects__grid .text-p {
+        font-size: 15px;
+    }
+
+
+    .testimonial {
+        padding-bottom: 100px;
+    }
+    .testimonial .text-h2 {
+        margin-bottom: 55px;
+    }
+    .person-block .text-h3 {
+        font-size: 25px;
+    }
+    .person-block .text-p {
+        margin: 0;
+        font-size: 15px;
+    }
+
+    .logo {
+
+        font-size: 30px;
+    }
+    .footer .text-p {
+        font-size: 15px;
+    }
+
+    .arcticles {
+        font-size: 15px;
+    }
+
+    .text-h4 {
+        font-size: 20px;
+    }
+
+
+    .footer__flex {
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .map-title {
+        text-align: center;
+    }
+
+    .footer-map {
+        height: 230px;
+        width: 551px;
+    }
+}
 
  
   
